feat(ts): TypeScript/JavaScript test discovery plugin
Introduces methodatlas-discovery-typescript, the third first-class language
plugin, supporting Jest, Vitest, and Mocha test suites.

Also embeds AI scores in SARIF message text so they are visible in GitHub Security.